--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@supabase/supabase-js": "^2.57.4",
-    "@react-native-async-storage/async-storage": "2.1.0",
+    "expo-secure-store": "~14.0.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "expo-linear-gradient": "~13.0.2"
