--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,14 +5,13 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
     "expo": "~53.0.0",
     "expo-av": "~15.0.1",
     "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "4.4.0",
@@ -21,12 +20,11 @@
     "@supabase/supabase-js": "^2.57.4",
     "expo-secure-store": "~14.0.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
     "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "~18.3.0",
+    "@types/react": "~19.0.0",
     "typescript": "^5.1.3"
   },
   "private": true
