--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tax-academy-mobile",
+  "name": "tax-talk-pro-mobile",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
