--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "expo": "~53.0.0",
-    "expo-av": "~15.0.1",
+    "expo-video": "~2.2.2",
     "expo-status-bar": "~2.0.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
